# AED1-UFU

./: README.md
0-Analise_de_Algoritmos/ex000-pesquisa_binaria/: pesquisa_binaria.c
1-Modularidade_em_programacao/Exercicios/ex002/: ex002.c  media.c  media.h
1-Modularidade_em_programacao/Exercicios/ex003/: ex003.c  mdc.c  mdc.h
1-Modularidade_em_programacao/Exercicios/ex004/: aluno.c  aluno.h  ex004.c
1-Modularidade_em_programacao/Exercicios/ex005/: ex005.c  matriz.c  matriz.h
2-Ponteiros_e_Alocacao_Dinamica/Lab/: 001.c  002.c  003.c  004.c
2-Ponteiros_e_Alocacao_Dinamica/Lista/: 026.c
3-Tipo_Abstrato_de_Dado-TAD/Lab4/: teste.c
3-Tipo_Abstrato_de_Dado-TAD/Lab4/ex004/: functions.c  functions.h  main.c
3-Tipo_Abstrato_de_Dado-TAD/Lab5-v2/ex006/: CMakeLists.txt  livros.c  livros.h  main.c
4-Listas_Encadeadas/Pratica06/: CMakeLists.txt
4-Listas_Encadeadas/Pratica08/: CMakeLists.txt  functions.c  functions.h  main.c
5-Lista_Circular_e_Duplamente_Encadeada/Pratica09/: CMakeLists.txt  functions.c  functions.h  main.c
5-Lista_Circular_e_Duplamente_Encadeada/Pratica10/: CMakeLists.txt  functions.c  functions.h
5-Lista_Circular_e_Duplamente_Encadeada/Pratica11/: CMakeLists.txt  functions.c  functions.h  main.c  names.txt
5-Lista_Circular_e_Duplamente_Encadeada/Pratica12/: CMakeLists.txt  main.c  musicas.txt  musicas2.txt  playlist.c  playlist.h
6-Pilhas/Pratica13/: CMakeLists.txt  battery.c  battery.h  dictionary.c  dictionary.h  main.c  phrases.txt  words_list.txt
7-Filas/exerciciosFila/: fila.c  fila.h  main.c
(+8 files in other folders)
